[SYTO-1230] Fix icon misalignment on icon page (#447)

--- a/src/site/_styles/docs.scss
+++ b/src/site/_styles/docs.scss
@@ -132,7 +132,7 @@ hr {
 .illustratedexamples-item {
   text-align: center;
   list-style-type: none;
-  min-height: 215px;
+  min-height: 217px;
 }
 
 .circle {
